# quotid

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  compose.yaml  package-lock.json  package.json  prisma.config.ts  turbo.json
.likec4/: callSequence.likec4.snap
apps/pipecat-bot/: .dockerignore  Dockerfile  pyproject.toml
apps/pipecat-bot/quotid_bot/: config.py  correlation.py  pipeline.py  server.py  stt_factory.py  system_prompt.py  temporal_completion.py  transcript_accumulator.py  twilio_signature.py
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  proxy.ts  vitest.config.ts
apps/web/__tests__/: auth.test.ts  login-route.integration.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: icons.tsx  theme-script.tsx
apps/web/lib/: auth.ts  codec.ts  format.ts  query-client.ts  temporal-client.ts  transcript.ts
cloudflared/: config.yml.example
docs/: SESSION_HANDOFF.md
docs/architecture/: c4-context.md  c4-deployment.md  pipecat-pipeline.md  temporal-workflow.md  transcription-interface.md
docs/architecture/api/: README.md  nextjs.openapi.yaml  pipecat-bot.openapi.yaml  server-actions.md
docs/architecture/deprecated/: README.md  (+3 more)
prisma/: schema.prisma  seed.ts
scripts/: deploy.sh
workers/temporal-worker/: .dockerignore  Dockerfile  pyproject.toml
workers/temporal-worker/quotid_worker/: activities.py  config.py  db.py  dto.py  main.py  workflows.py
workers/temporal-worker/scripts/: find_user.py  trigger_workflow.py
workers/temporal-worker/tests/: conftest.py  test_create_call_session.py
(+42 files in other folders)
