[project]
name = "quotid-bot"
version = "0.1.0"
description = "Quotid Pipecat bot server"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pipecat-ai[silero,smart-turn,daily,deepgram,cartesia,openai]>=0.0.50",
  "twilio>=9.3",
  "temporalio>=1.7",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "websockets>=13.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
quotid-bot = "quotid_bot.server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["quotid_bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
