[project]
name = "quotid-worker"
version = "0.1.0"
description = "Quotid Temporal worker"
requires-python = ">=3.12"
dependencies = [
  "temporalio>=1.7",
  "prisma>=0.15",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "tenacity>=9.0",
  "httpx>=0.28.1",
]

[project.scripts]
quotid-worker = "quotid_worker.main:amain"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
